--- a/extension/templates/mainpage.html
+++ b/extension/templates/mainpage.html
@@ -34,7 +34,7 @@
                 <label for="url">URL</label>
                 <input type="text" id="url" placeholder="">
             </div>
-             
+
 
             <div class="form-group">
 				<label for="category-dropdown">CATEGORY</label>
@@ -47,7 +47,7 @@
                 <label for="description">TITLE</label>
                 <input type="text" id="description" placeholder="TITLE">
             </div>
-     
+
             <!-- <div class="form-group">
 				<label for="tags">TAGS</label>
                 <div class="tags-container"></div>
@@ -71,11 +71,11 @@
                 </select>
 				<dic class="filtered-list">
 					<ul>
-						<li>Career Paths</li>
-						<li>Programming</li>
-						<li>Frontend World</li>
-						<li>Backend World</li>
-						<li>Human World</li>
+						<li><span>Career Paths</span></li>
+						<li><span>Programming</span></li>
+						<li><span>Frontend World</span></li>
+						<li><span>Backend</span></li>
+						<li><span>Human World</span></li>
 					</ul>
 				</dic>
             </div>
