--- a/extension/templates/mainpage.html
+++ b/extension/templates/mainpage.html
@@ -69,7 +69,7 @@
                     <option value="filter-tags">Filter:Tags</option>
                     <option value="filter-category-tags">Filter:Category/Tags</option>
                 </select>
-				<dic class="filtered-list">
+				<div class="filtered-list">
 					<ul>
 						<li><span>Career Paths</span></li>
 						<li><span>Programming</span></li>
@@ -77,7 +77,7 @@
 						<li><span>Backend</span></li>
 						<li><span>Human World</span></li>
 					</ul>
-				</dic>
+				</div>
             </div>
            <!--  <div class="form-group">
                 <label for="filter-tag">TAGS</label>
