--- a/extension/css/style.css
+++ b/extension/css/style.css
@@ -14,36 +14,39 @@ body {
 
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
-    background-color: #1E90FF;
-    color: white;
-    padding: 10px 20px;
+    background-color: #6bbee7;
+    color: rgba(255, 255, 255, 0.8);
+    padding: 5px 20px;
+	gap: 2em;
 }
 
 .logo-container{
     display: flex;
     align-items: center;
-    margin-right: 10px;
+    /* margin-right: 10px; */
 }
 .logo {
     height: 40px; /* Adjust the height as needed */
-    margin-right: 20px;
+    /* margin-right: 20px; */
 }
 
 .separator{
-    position: absolute;
+    /* position: absolute; */
     height: 30px;
     width: 2px;
-    background-color: white;
-    left: 80px;
-    margin-right: 5px;
+    background-color: rgba(255, 255, 255, 0.8);
+    /* left: 80px; */
+    /* margin-right: 5px; */
 }
 
 .bookmark-manager {
-    position: absolute;
-    left: 100px;
+    /* position: absolute; */
+    /* left: 100px; */
     font-size: 15px; /* Adjusted margin to move text closer to the left */
+	font-weight: bold;
+	color: rgba(255, 255, 255, 1);
 }
 
 
@@ -157,13 +160,12 @@ background-color: #007bff;
 
 
 .bookmark-form .create-button {
-    padding: 10px;
+    padding: 10px 20px;
     background-color: #6bbee7;
     color: white;
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    /* margin-top: 50px; */
     transition: background-color 0.3s ease, transform 0.3s ease
 }
 
