--- a/extension/templates/mainpage.html
+++ b/extension/templates/mainpage.html
@@ -14,8 +14,9 @@
         <div class="logo-container">
             <img src="../img/logo4 (5).png" alt="Logo" class="logo">
         </div>
+		<div class="bookmark-manager">BOOKMARK MANAGER</div>
         <div class="separator"> </div>
-            <div class="bookmark-manager">BOOKMARK MANAGER</div>
+		<div class="tagline">BOOKMARK MANAGER</div>
         <div class="user-menu">
             <div class="profile-icon"></div>
             <div class="dropdown">
