--- a/extension/templates/mainpage.html
+++ b/extension/templates/mainpage.html
@@ -11,12 +11,15 @@
 <body>
     <!--header structure-->
     <header>
+		<div class="div-1">
         <div class="logo-container">
             <img src="../img/logo4 (5).png" alt="Logo" class="logo">
         </div>
 		<div class="bookmark-manager">BOOKMARK MANAGER</div>
         <div class="separator"> </div>
 		<div class="tagline">BOOKMARK MANAGER</div>
+		</div>
+		<div class="div-2">
         <div class="user-menu">
             <div class="profile-icon"></div>
             <div class="dropdown">
@@ -27,6 +30,7 @@
                 </ul>
             </div>
         </div>
+		</div>
     </header>
     <!---sidebar container-->
     <div class="form-container">
