--- a/extension/css/style.css
+++ b/extension/css/style.css
@@ -20,6 +20,7 @@ header {
     color: rgba(255, 255, 255, 0.8);
     padding: 5px 20px;
 	gap: 2em;
+	padding-left: 8px;
 }
 
 header .div-1, header .div-2 {
@@ -38,7 +39,7 @@ header .div-1 {
     align-items: center;
 }
 .logo {
-    height: 40px;
+    height: 32px;
 }
 
 .separator{
