--- a/extension/templates/mainpage.html
+++ b/extension/templates/mainpage.html
@@ -13,7 +13,7 @@
     <header>
 		<div class="div-1">
         <div class="logo-container">
-            <img src="../img/logo4 (5).png" alt="Logo" class="logo">
+            <img src="../img/logo.png" alt="Logo" class="logo">
         </div>
 		<div class="bookmark-manager">BOOKMARK MANAGER</div>
         <div class="separator"> </div>
