Styling: attempt to fix height issue - progress

--- a/extension/css/style.css
+++ b/extension/css/style.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Poppins', sans-serif;
     background-color: white;
 	background-color: #ecf3fd;
-    height: 100vh;
+    /* height: 100v_h; */
 	width: 780px;
 }
 
@@ -182,7 +182,6 @@ background-color: #007bff;
 .container {
     margin-top: -10px;
     display: flex;
-    height:80vh;
 	background-color: #ecf3fd;
 }
 
@@ -195,7 +194,7 @@ aside {
     flex-direction: column;
     border-top-left-radius: 0px;
     border-top-right-radius: 20px;
-	height: 100vh;
+	height: 72vh;
 	margin-top: 0;
 	margin-bottom: 0;
 	padding-bottom: 5px;
